samples/_failures_safe/1761666745_5e312b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e3afb48.c: In function ‘main’:
./samples/SAFE/__tmp_4e3afb48.c:163:52: error: expected ‘]’ at end of input
  163 |     if (input_length > 0 && input_line[input_length
      |                                                    ^
      |                                                    ]
./samples/SAFE/__tmp_4e3afb48.c:163:5: error: expected declaration or statement at end of input
  163 |     if (input_length > 0 && input_line[input_length
      |     ^~
